--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "personal-website-backend"
+name = "unnet-backend"
 version = "0.1.0"
 edition = "2021"
 
@@ -8,3 +8,4 @@ actix-web = "4"
 actix-cors = "0.7"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+rusqlite = { version = "0.31", features = ["bundled"] }
