--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-three/drei": "^9.88.0",
     "@react-three/fiber": "^8.15.0",
-    "framer-motion": "^10.16.0",
-    "lucide-react": "^0.292.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "three": "^0.158.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "autoprefixer": "^10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "autoprefixer": "^10.4.16",
+    "framer-motion": "^10.16.0",
+    "lucide-react": "^0.292.0",
     "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.13.0",
+    "tailwind-merge": "^2.0.0",
+    "tailwindcss": "^3.3.5",
+    "three": "^0.158.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
